--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta http-equiv="refresh" content="3600">
     <link rel="shortcut icon" type="image/png" href="static/favicon.png">
     <link rel="apple-touch-icon" href="static/logo.png">
 
